buton.killian/hello-world.{buton.killian}/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world
spec:
  rules:
    - host: hello-world.buton.killian
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world
                port:
                  number: 80
          - path: /service
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 8080
